Fix connection to Docker daemon.

--- a/Docker_Notebooks_And_Reproducible_Research.ipynb
+++ b/Docker_Notebooks_And_Reproducible_Research.ipynb
@@ -36,7 +36,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "open busybox.dockerarchive.tar: no such file or directory\r\n"
+      "Containers: 0\r\n",
+      "Images: 0\r\n",
+      "Server Version: 1.9.1\r\n",
+      "Storage Driver: vfs\r\n",
+      "Execution Driver: native-0.2\r\n",
+      "Logging Driver: json-file\r\n",
+      "Kernel Version: 4.4.1-aufs\r\n",
+      "Operating System: Alpine Linux v3.3 (containerized)\r\n",
+      "CPUs: 12\r\n",
+      "Total Memory: 62.79 GiB\r\n",
+      "Name: 4ba77034ef3a\r\n",
+      "ID: ONYK:NFXO:JXTT:OVJP:6ZSP:X556:BF7O:CZS2:TWAL:NUNJ:ONGK:GGZ4\r\n",
+      "WARNING: bridge-nf-call-iptables is disabled\r\n",
+      "WARNING: bridge-nf-call-ip6tables is disabled\r\n"
      ]
     }
    ],
@@ -56,7 +69,8 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "!sudo docker load -i busybox.dockerarchive.tar"
+    "!docker info\n",
+    "!docker load -i busybox.dockerarchive.tar"
    ]
   },
   {
