Add missing images.

--- a/Docker_Notebooks_And_Reproducible_Research.ipynb
+++ b/Docker_Notebooks_And_Reproducible_Research.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -31,33 +31,12 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Containers: 0\r\n",
-      "Images: 0\r\n",
-      "Server Version: 1.9.1\r\n",
-      "Storage Driver: vfs\r\n",
-      "Execution Driver: native-0.2\r\n",
-      "Logging Driver: json-file\r\n",
-      "Kernel Version: 4.4.1-aufs\r\n",
-      "Operating System: Alpine Linux v3.3 (containerized)\r\n",
-      "CPUs: 12\r\n",
-      "Total Memory: 62.79 GiB\r\n",
-      "Name: 4ba77034ef3a\r\n",
-      "ID: ONYK:NFXO:JXTT:OVJP:6ZSP:X556:BF7O:CZS2:TWAL:NUNJ:ONGK:GGZ4\r\n",
-      "WARNING: bridge-nf-call-iptables is disabled\r\n",
-      "WARNING: bridge-nf-call-ip6tables is disabled\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Imports for running this presentation live\n",
     "\n",
     "from ipywidgets import interact, interactive\n",
-    "from IPython.display import clear_output, display, HTML\n",
+    "from IPython.display import clear_output, display, HTML, YouTubeVideo\n",
     "\n",
     "import numpy as np\n",
     "from scipy import integrate\n",
@@ -366,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -379,21 +358,7 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unable to find image 'busybox:latest' locally\n",
-      "latest: Pulling from library/busybox\n",
-      "\u001b[0B\n",
-      "\u001b[0B\n",
-      "\u001b[1BDigest: sha256:c1bc9b4bffe665bf014a305cc6cf3bca0e6effeb69d681d7a208ce741dad58e0\n",
-      "Status: Downloaded newer image for busybox:latest\n",
-      "Hello Docker World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker run --rm busybox sh -c 'echo \"Hello Docker World!\"'"
    ]
@@ -413,7 +378,7 @@
     }
    },
    "source": [
-    "###Docker is a combination of a:\n",
+    "### Docker is a combination of a:\n",
     "\n",
     "1. **Sandboxed chroot**\n",
     "2. **Copy on write filesystem**\n",
@@ -435,7 +400,7 @@
     }
    },
    "source": [
-    "##Sandboxed chroot"
+    "## Sandboxed chroot"
    ]
   },
   {
@@ -462,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -474,17 +439,7 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Docker World!\n",
-      "CPU times: user 4 ms, sys: 4 ms, total: 8 ms\n",
-      "Wall time: 1.23 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time !docker run --rm busybox sh -c 'echo \"Hello Docker World!\"'"
    ]
@@ -508,7 +463,7 @@
     "* **Namespaces**: isolated processes, networking, messaging, file systems, hostname's\n",
     "* **CGroups**: groups together cpu, memory, and IO resources\n",
     "\n",
-    "<img src=\"images/Chroot.png\" width=\"600px\">"
+    "<img src=\"Data/Chroot.png\" width=\"600px\">"
    ]
   },
   {
@@ -526,7 +481,7 @@
     }
    },
    "source": [
-    "##Copy on Write Filesystem\n",
+    "## Copy on Write Filesystem\n",
     "\n",
     "**Union file systems**, or UnionFS, are file systems that operate by **creating layers**, making them very **lightweight** and **fast** while **saving disk space**.\n",
     "\n",
@@ -539,8 +494,8 @@
     "\n",
     "<table border=\"0\">\n",
     "<tr>\n",
-    "<th><img src=\"images/LayerCake.jpg\" width=\"300px\"></th>\n",
-    "<th><img src=\"images/DockerFilesystems.svg\" width=\"400px\"></th>\n",
+    "<th><img src=\"Data/LayerCake.jpg\" width=\"300px\"></th>\n",
+    "<th><img src=\"Data/DockerFilesystems.svg\" width=\"400px\"></th>\n",
     "</tr>\n",
     "</table>\n"
    ]
@@ -558,7 +513,7 @@
     }
    },
    "source": [
-    "##Distributed VCS for binaries\n",
+    "## Distributed VCS for binaries\n",
     "\n",
     "### Docker is like Git for binaries\n",
     "\n"
@@ -615,7 +570,7 @@
     }
    },
    "source": [
-    "<img src=\"images/DockerHub.png\" width=\"400px\">"
+    "<img src=\"Data/DockerHub.png\" width=\"400px\">"
    ]
   },
   {
@@ -631,7 +586,7 @@
     }
    },
    "source": [
-    "###Installing\n",
+    "### Installing\n",
     "\n",
     "Here's what you need:\n",
     "\n",
@@ -639,7 +594,7 @@
     "- Support for a layered filesystem (like AUFS)\n",
     "- Docker Daemon / Server (written in Go)\n",
     "\n",
-    "<img src=\"images/MasonJar.jpg\" width=\"600px\">"
+    "<img src=\"Data/MasonJar.jpg\" width=\"600px\">"
    ]
   },
   {
@@ -654,7 +609,7 @@
     }
    },
    "source": [
-    "####Linux\n",
+    "#### |Linux\n",
     "\n",
     "- Ubuntu 14.04 *or*\n",
     "- See [Docker installation instructions](http://docs.docker.com/installation/) for distributions with Kernel 3.8 + later *or*\n",
@@ -675,9 +630,9 @@
     }
    },
    "source": [
-    "####Windows and Mac\n",
+    "#### Windows and Mac\n",
     "\n",
-    "[boot2docker](http://boot2docker.io/)\n",
+    "[Docker Machin](https://docs.docker.com/machine/overview/)\n",
     "\n",
     "* easy install of\n",
     "  - Git Bash\n",
@@ -685,8 +640,7 @@
     "  - Lightweight Linux distribution\n",
     "  - Docker\n",
     "\n",
-    "* Works, but adds layer of complexity\n",
-    "* Mac native interface improving\n",
+    "* Mac OSX users can use the Docker client from the Mac bash shell\n",
     "* Comes with busybox shell -> Write your Docker build.sh and run.sh in Bourne shell"
    ]
   },
@@ -721,9 +675,9 @@
     }
    },
    "source": [
-    "##Image\n",
+    "## Image\n",
     " \n",
-    "###A read-only file system layer"
+    "### A read-only file system layer"
    ]
   },
   {
@@ -740,14 +694,14 @@
     }
    },
    "source": [
-    "<img src=\"images/DockerFilesystemsBusybox.png\" width=\"600px\">"
+    "<img src=\"Data/DockerFilesystemsBusybox.png\" width=\"600px\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "internals": {
      "frag_helper": "fragment_end",
      "frag_number": 33,
@@ -759,18 +713,7 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "REPOSITORY             TAG                 IMAGE ID            CREATED             VIRTUAL SIZE\r\n",
-      "busybox                buildroot-2014.02   8c2e06607696        11 weeks ago        2.433 MB\r\n",
-      "busybox                latest              8c2e06607696        11 weeks ago        2.433 MB\r\n",
-      "odise/busybox-python   latest              649988b8bf0e        4 months ago        20.26 MB\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker images"
    ]
@@ -788,9 +731,9 @@
     }
    },
    "source": [
-    "##Container\n",
+    "## Container\n",
     "\n",
-    "###An modifiable image with processes running in memory, or an exited container with a modified filesystem"
+    "### An modifiable image with processes running in memory, or an exited container with a modified filesystem"
    ]
   },
   {
@@ -807,14 +750,14 @@
     }
    },
    "source": [
-    "<img src=\"images/DockerFilesystemsBusybox.png\" width=\"600px\">"
+    "<img src=\"Data/DockerFilesystemsBusybox.png\" width=\"600px\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "internals": {
      "frag_helper": "fragment_end",
      "frag_number": 36,
@@ -824,24 +767,16 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker ps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "internals": {
      "frag_helper": "fragment_end",
      "frag_number": 38
@@ -850,24 +785,16 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3a6bf9d61548ae36bdc0bdb5a87aec17a8056517709c61e2df989aa0a37b7f32\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker run -d busybox sh -c 'sleep 3'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "internals": {
      "frag_helper": "fragment_end",
      "frag_number": 39
@@ -876,24 +803,16 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker ps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "internals": {
      "frag_helper": "fragment_end",
      "frag_number": 40,
@@ -904,17 +823,7 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID        IMAGE                       COMMAND             CREATED             STATUS                      PORTS               NAMES\r\n",
-      "3a6bf9d61548        busybox:buildroot-2014.02   \"sh -c 'sleep 3'\"   14 seconds ago      Exited (0) 11 seconds ago                       goofy_almeida       \r\n",
-      "a3761241bf97        busybox:buildroot-2014.02   \"sh -c 'sleep 3'\"   53 minutes ago      Exited (0) 53 minutes ago                       reverent_stallman   \r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker ps -a"
    ]
@@ -932,9 +841,9 @@
     }
    },
    "source": [
-    "##Volume\n",
+    "## Volume\n",
     "\n",
-    "###A mounted directory that is not tracked as a filesystem layer\n",
+    "### A directory within one or more containers that bypasses the Union File System\n",
     "\n",
     "* Data volumes are initialized when a container is created\n",
     "* Volumes can be shared and reused between containers\n",
@@ -945,8 +854,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "internals": {
@@ -957,84 +865,11 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BackwardsCompatibility.png    DockerVM.jpg\r\n",
-      "BuildInstructions1.png\t      Eww.jpg\r\n",
-      "BuildInstructions2.png\t      FilesystemsGeneric.png\r\n",
-      "BuildInstructions3.png\t      itkka.png\r\n",
-      "BuildInstructions4.png\t      Jenkins.png\r\n",
-      "CarJam.jpg\t\t      Jupyter.png\r\n",
-      "Chroot.png\t\t      LayerCake.jpg\r\n",
-      "ConfusedCat.jpg\t\t      Liar.png\r\n",
-      "Debian.png\t\t      MakerwareScreenshot.png\r\n",
-      "DockerDeploy.jpg\t      MakerwareVTK.png\r\n",
-      "DockerFilesystemsBusybox.png  MakerwareWebsite.png\r\n",
-      "DockerFilesystems.svg\t      MasonJar.jpg\r\n",
-      "DockerHub.png\t\t      ModulesModulesModules.png\r\n",
-      "DockerLogo.png\t\t      PythonStoryline.svg\r\n"
-     ]
-    }
-   ],
    "source": [
-    "!ls $PWD/images/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true,
-    "internals": {
-     "frag_helper": "fragment_end",
-     "frag_number": 40
-    },
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BackwardsCompatibility.png\r\n",
-      "BuildInstructions1.png\r\n",
-      "BuildInstructions2.png\r\n",
-      "BuildInstructions3.png\r\n",
-      "BuildInstructions4.png\r\n",
-      "CarJam.jpg\r\n",
-      "Chroot.png\r\n",
-      "ConfusedCat.jpg\r\n",
-      "Debian.png\r\n",
-      "DockerDeploy.jpg\r\n",
-      "DockerFilesystems.svg\r\n",
-      "DockerFilesystemsBusybox.png\r\n",
-      "DockerHub.png\r\n",
-      "DockerLogo.png\r\n",
-      "DockerVM.jpg\r\n",
-      "Eww.jpg\r\n",
-      "FilesystemsGeneric.png\r\n",
-      "Jenkins.png\r\n",
-      "Jupyter.png\r\n",
-      "LayerCake.jpg\r\n",
-      "Liar.png\r\n",
-      "MakerwareScreenshot.png\r\n",
-      "MakerwareVTK.png\r\n",
-      "MakerwareWebsite.png\r\n",
-      "MasonJar.jpg\r\n",
-      "ModulesModulesModules.png\r\n",
-      "PythonStoryline.svg\r\n",
-      "itkka.png\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!docker run --rm --volume $PWD/images:/images busybox \\\n",
-    "    sh -c 'ls /images'"
+    "### Why use a data volume?\n",
+    "\n",
+    "* Store and share data\n",
+    "* Expose data or code from the host to the Docker computational environment"
    ]
   },
   {
@@ -1049,14 +884,26 @@
     }
    },
    "source": [
-    "##Dockerfile\n",
+    "## Dockerfile\n",
     "\n",
-    "###A sequence of instructions to generate a Docker image"
+    "### A sequence of instructions to generate a Docker image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!mkdir -p docker-ls-data\n",
+    "!cp $PWD/Data/*.png docker-ls-data/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -1067,25 +914,16 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting docker-ls-images/Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%writefile docker-ls-images/Dockerfile\n",
+    "%%writefile docker-ls-data/Dockerfile\n",
     "\n",
-    "# Best practice for Dockerfile's:\n",
-    "#   specify exact versions whenever possible.\n",
-    "FROM busybox:4986bf8c1536\n",
+    "FROM busybox\n",
     "MAINTAINER Matt McCormick <matt.mccormick@kitware.com>\n",
-    "RUN mkdir -p /images\n",
-    "VOLUME /images\n",
-    "CMD [\"/bin/sh\", \"-c\", \"ls /images\"]"
+    "RUN mkdir -p /Data\n",
+    "ADD *.png /Data/\n",
+    "VOLUME /Data\n",
+    "CMD [\"/bin/sh\", \"-c\", \"ls /Data\"]"
    ]
   },
   {
@@ -1103,7 +941,7 @@
    },
    "outputs": [],
    "source": [
-    "!docker build -t ls-images ./docker-ls-images"
+    "!docker build -t ls-data ./docker-ls-data"
    ]
   },
   {
@@ -1121,49 +959,7 @@
    },
    "outputs": [],
    "source": [
-    "!docker run --rm -v $PWD/images:/images ls-images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "internals": {
-     "frag_helper": "fragment_end",
-     "frag_number": 40,
-     "slide_helper": "subslide_end"
-    },
-    "slide_helper": "slide_end",
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"400\"\n",
-       "            height=300\"\n",
-       "            src=\"https://www.youtube.com/embed/QqfjiuqVrV4\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fe1f0a37190>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "YouTubeVideo('QqfjiuqVrV4')"
+    "!docker run --rm ls-data"
    ]
   },
   {
@@ -1181,7 +977,7 @@
     }
    },
    "source": [
-    "## Scientific Python with Docker"
+    "## Scientific Research with Docker Notebook"
    ]
   },
   {
@@ -1199,14 +995,14 @@
     }
    },
    "source": [
-    "##Graphical Applications and Docker\n",
+    "## Graphical Applications and Docker\n",
     "\n",
     "A **portable Docker image** will only assume standard CPU/memory/disk/network resources are available. If *local USB devices* and **video card devices** are used the images will **not be runnable anywhere**.\n",
     "\n",
     "* No OpenGL\n",
     "* Use [IPython / Jupyter Notebooks](http://ipython.org/notebook.html)\n",
     "\n",
-    "<img src=\"images/Jupyter.png\" width=\"500px\">"
+    "<img src=\"Data/Jupyter.png\" width=\"500px\">"
    ]
   },
   {
@@ -1222,9 +1018,10 @@
     }
    },
    "source": [
-    "##Choosing a base image\n",
+    "## Choosing a base image\n",
     "\n",
-    "* [debian](https://registry.hub.docker.com/_/debian/) - [Most common](https://docs.docker.com/articles/dockerfile_best-practices/) lightweight image\n",
+    "* [debian](https://registry.hub.docker.com/_/debian/) - [Most common](https://docs.docker.com/articles/dockerfile_best-practices/) lightweight image with many packages available\n",
+    "* [alpine](https://hub.docker.com/_/alpine/) Very small image\n",
     "* [ipython/notebook](https://registry.hub.docker.com/u/ipython/notebook/) - Launcher SSL / password enabled IPython notebook\n",
     "* [jupyter/tmpnb](https://registry.hub.docker.com/u/jupyter/tmpnb/) - Launches \"temporary\" Jupyter notebook servers\n",
     "* [continuumio/miniconda](https://registry.hub.docker.com/u/continuumio/miniconda/) miniconda installed\n",
@@ -1232,7 +1029,7 @@
     "* ...\n",
     "* Make your own\n",
     "\n",
-    "<img src=\"images/Debian.png\" width=\"100px\">"
+    "<img src=\"Data/Debian.png\" width=\"100px\">"
    ]
   },
   {
@@ -1249,7 +1046,7 @@
    "source": [
     "**Isn't there supposed to be no OpenGL?**\n",
     "\n",
-    "<img src=\"images/Liar.png\" width=\"600px\">"
+    "<img src=\"Data/Liar.png\" width=\"600px\">"
    ]
   },
   {
@@ -1544,7 +1341,7 @@
     }
    },
    "source": [
-    "##Docker vs. LXC\n",
+    "## Docker vs. LXC\n",
     "\n",
     "* [LXC](https://linuxcontainers.org/) is a set of tools and API to interact with Linux kernel namespaces, cgroups, etc.\n",
     "* LXC used to be the default execution enviroment for Docker\n",
@@ -1573,10 +1370,10 @@
     }
    },
    "source": [
-    "##Docker vs Rocket\n",
+    "## Docker vs Rocket\n",
     "\n",
     "- [Rocket](https://github.com/coreos/rocket) is a container system like Docker developed by CoreOS\n",
-    "- Rocket is not yet fully operational\n",
+    "- Rocket is not as mature\n",
     "- Rocket does not use a daemon/client system"
    ]
   }
