OpenGL updates and slide specifications.

--- a/Docker_Notebooks_And_Reproducible_Research.ipynb
+++ b/Docker_Notebooks_And_Reproducible_Research.ipynb
@@ -355,7 +355,7 @@
     },
     "slide_helper": "subslide_end",
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -422,7 +422,7 @@
     "\n",
     "It works with **containers** as opposed to **virtual machines** (VM's).\n",
     "\n",
-    "<img src=\"images/DockerVM.jpg\" width=\"600\">"
+    "<img src=\"Data/DockerVM.jpg\" width=\"600\">"
    ]
   },
   {
@@ -454,7 +454,7 @@
     },
     "slide_helper": "subslide_end",
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -529,7 +529,7 @@
      "frag_number": 14
     },
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -605,7 +605,7 @@
      "frag_number": 27
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -626,13 +626,13 @@
     },
     "slide_helper": "slide_end",
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "fragment"
     }
    },
    "source": [
     "#### Windows and Mac\n",
     "\n",
-    "[Docker Machin](https://docs.docker.com/machine/overview/)\n",
+    "[Docker Machine](https://docs.docker.com/machine/overview/)\n",
     "\n",
     "* easy install of\n",
     "  - Git Bash\n",
@@ -862,7 +862,7 @@
      "frag_number": 40
     },
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -880,7 +880,7 @@
      "frag_number": 40
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -893,7 +893,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -911,7 +914,7 @@
      "frag_number": 40
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -936,7 +939,7 @@
      "frag_number": 40
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -954,7 +957,7 @@
      "frag_number": 40
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -999,8 +1002,8 @@
     "\n",
     "A **portable Docker image** will only assume standard CPU/memory/disk/network resources are available. If *local USB devices* and **video card devices** are used the images will **not be runnable anywhere**.\n",
     "\n",
-    "* No OpenGL\n",
     "* Use [IPython / Jupyter Notebooks](http://ipython.org/notebook.html)\n",
+    "* The [docker-opengl](https://github.com/thewtex/docker-opengl-nvidia)  image offers CPU-based OpenGL rendering viewable via an HTML5 VNC client.\n",
     "\n",
     "<img src=\"Data/Jupyter.png\" width=\"500px\">"
    ]
@@ -1030,42 +1033,6 @@
     "* Make your own\n",
     "\n",
     "<img src=\"Data/Debian.png\" width=\"100px\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "internals": {
-     "frag_helper": "fragment_end",
-     "frag_number": 40
-    },
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "**Isn't there supposed to be no OpenGL?**\n",
-    "\n",
-    "<img src=\"Data/Liar.png\" width=\"600px\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "internals": {
-     "frag_helper": "fragment_end",
-     "frag_number": 40,
-     "slide_helper": "subslide_end"
-    },
-    "slide_helper": "slide_end",
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "It is possible to run accelerated X11 OpenGL 3D applications, but the Docker images that are built will **only work** on host systems with the same video driver and compatible video card.\n",
-    "\n",
-    "See the [docker-opengl-nvidia](https://github.com/thewtex/docker-opengl-nvidia) and the [docker-opengl-mesa](https://github.com/thewtex/docker-opengl-mesa) repositories."
    ]
   },
   {
@@ -1379,6 +1346,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
